--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.24.0
-pandas==1.5.3
-sentence-transformers==2.2.2
-scikit-learn==1.2.2
-numpy==1.23.5
+streamlit
+pandas
+sentence-transformers==0.3.0
+scikit-learn
+numpy
