--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-sentence-transformers==0.3.0
-scikit-learn
-numpy
-transformers
-torch
+streamlit==1.24.0
+pandas==1.5.3
+sentence-transformers==2.2.2
+scikit-learn==1.2.2
+numpy==1.23.5
+transformers==4.6.1  
+torch==1.12.1
