--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ sentence-transformers==2.2.2
 scikit-learn==1.2.2
 numpy==1.23.5
 transformers==4.21.1  # Compatible with sentence-transformers 2.2.2 and huggingface-hub >=0.4.0
-torch==1.12.1
+torch
