--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ scikit-learn==1.2.2
 numpy==1.23.5
 transformers==4.21.1  # Compatible with sentence-transformers 2.2.2 and huggingface-hub >=0.4.0
 torch
+cython
