--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ pandas==1.5.3
 sentence-transformers==2.2.2
 scikit-learn==1.2.2
 numpy==1.23.5
-transformers==4.21.1  # Compatible with sentence-transformers 2.2.2 and huggingface-hub >=0.4.0
+transformers==4.21.1  
 torch
 cython
